@@ -23,6 +23,8 @@
 
 * Fixed a bug where where the plugin picker would display the plugin names
   translated in the request language instead of the user's language.
+* Fixed a bug which raised an exception when the ``AdvancedSettingsForm``
+  failed validation on certain fields.
 
 
 === 3.3.2 (2016-08-11) ===
